# flux

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CHARTER.md  Cargo.toml  DOCKSIDE-EXAM.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/flux-bytecode/: Cargo.toml
crates/flux-bytecode/src/: decoder.rs  encoder.rs  error.rs  format.rs  header.rs  lib.rs  opcodes.rs  validator.rs
crates/flux-bytecode/tests/: roundtrip.rs
crates/flux-fir/: Cargo.toml
crates/flux-fir/src/: blocks.rs  builder.rs  instructions.rs  lib.rs  types.rs  validator.rs  values.rs
crates/flux-fir/tests/: fir_tests.rs
crates/flux-parser/: Cargo.toml
crates/flux-parser/src/: ast.rs  compiler.rs  lib.rs  parser.rs
crates/flux-parser/tests/: parser_tests.rs
crates/flux-vm/: Cargo.toml
crates/flux-vm/src/: error.rs  interpreter.rs  lib.rs  memory.rs  registers.rs
crates/flux-vm/tests/: integration.rs
src/: lib.rs
