[workspace]
resolver = "2"
members = [
    "crates/flux-fir",
    "crates/flux-parser",
    "crates/flux-bytecode",
    "crates/flux-vm",
    ".",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
thiserror = "2"

[package]
name = "flux"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "FLUX — Fluid Language Universal eXecution runtime"

[[bin]]
name = "flux"
path = "src/bin/flux.rs"

[dependencies]
flux-bytecode = { path = "crates/flux-bytecode" }
flux-vm = { path = "crates/flux-vm" }
flux-fir = { path = "crates/flux-fir" }
flux-parser = { path = "crates/flux-parser" }
